# jinjaroot

./: README.md  jinjaroot.yaml  setup.cfg  setup.cfg.j2  setup.py
jinjaroot/: __init__.py  cli.py  generate.py  synctool.py  version.py  version.py.j2
