[metadata]
name = jinjaroot
version = 0.0.3
author = Jeremy Magland
author_email = jmagland@flatironinstitute.org
description = Utility for using jinja2 templates in code repos
url = https://github.com/magland/jinjaroot
project_urls =
    Bug Tracker = https://github.com/magland/jinjaroot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent